# rustllm

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs  model_commands.rs
src/model/: download.rs  inference.rs  mod.rs
src/server/: mod.rs
src/utils/: mod.rs
