[package]
name = "rustllm"
version = "0.1.0"
edition = "2021"
authors = ["Alex <alex@example.com>"]
description = "A Rust-based local LLM chat tool similar to Ollama"

[dependencies]
# llm = "1.2"  # Temporarily disabled due to API instability
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = "0.22"
indicatif = "0.17"
colored = "2.1"
rustyline = "13.0"
home = "0.5"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"